UPDATE Style and main

--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
     <title>Notfilm</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <span>NOTFILM</span>
+    </header>
 </body>
 </html>
