UPDATE main and style

--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <h2 class="serie-title">Demons slayer</h2>
-                    <div class="card">
+                    <div class="card bg-dark">
                         <img src="img/demon_slayer.jpg" alt="Image 1" class="series-cover">    
                     </div>
                 </div>
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <h2 class="serie-title">The Walking Dead</h2>
-                    <div class="card">
+                    <div class="card bg-dark">
                         <img src="#" alt="Image 1" class="series-cover">    
                     </div>
                 </div>
