--- a/main.html
+++ b/main.html
@@ -12,5 +12,16 @@
     <header>
         <span>NOTFILM</span>
     </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center my-4">
+                    <h1>Welcome to Notfilm</h1>
+                    <p>Your go-to platform for movie enthusiasts!</p>
+                </div>"
+            </div>
+
+        </div>
+    </main>
 </body>
 </html>
