UPDATE Main and Style

--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
         </div>
     </main>
     <footer>
-        <span>Creado por: Héctor Moreno García, Daniel Marcos Serrano y Jaime Bergd Lario</span>
+        <span>Creado por: Héctor Moreno García, Daniel Marcos Serrano y Jaime Bergad Lario</span>
     </footer>
 </body>
 </html>
