--- a/main_detalle_notfiml.html
+++ b/main_detalle_notfiml.html
@@ -32,13 +32,13 @@
             <div class="row">
                 <button type="button" class="btn btn-danger">
                     <i class="bi bi-play-fill"></i>
-                </button>
+                </button> 
             </div>
             <div class="row">
                 <h3>Trailer</h3>
             </div>
             <div class="row">
-                <video id="video" rc="videoplayback.mp4" controls autoplay loop poster="kimetsu.jpg" ></video>
+                <video id="video" src="videos/videoplayback.mp4" controls autoplay loop poster="img/kimetsu.jpg" ></video>
             </div>
             
         </div> <!--Fin columna izquierda-->
