UPDATE img, main and style

--- a/main.html
+++ b/main.html
@@ -18,47 +18,89 @@
         <div  class="container">
             <h1 class="genres">Anime</h1>
             <hr class="divider">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <h2 class="serie-title">Demons slayer</h2>
-                    <div class="card bg-dark">
-                        <img src="img/demon_slayer.jpg" alt="Image 1" class="series-cover">    
+            <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/demon_slayer.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Demon Slayer <span class="badge rounded-pill bg-warning">16+</span></h5>
+                            <ul>
+                                <li>Estreno: 2019</li>
+                                <li>Temporadas: 5</li>
+                            </ul>
+                            <p class="card-text">Demon Slayer sigue a Tanjiro Kamado, un joven cuya familia es asesinada por demonios y su hermana Nezuko se convierte en uno de ellos. Decidido a vengarse y hallar una cura, se une a los Cazadores de Demonios. La serie destaca por su espectacular animación, combates intensos y una profunda carga emocional.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <h2 class="serie-title">One piece</h2>
-                    <div class="card">
-                        <img src="#" alt="Image 1" class="series-cover">    
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/death_note.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Death Note <span class="badge rounded-pill bg-warning">16+</span></h5>
+                            <ul>
+                                <li>Estreno: 2006</li>
+                                <li>Temporadas: 1</li>
+                            </ul>
+                            <p class="card-text">Death Note narra la historia de Light Yagami, un estudiante que encuentra un cuaderno capaz de matar a cualquiera cuyo nombre sea escrito en él. Decidido a eliminar a los criminales, se convierte en el misterioso Kira. Su enfrentamiento con el brillante detective L crea un intenso duelo psicológico entre justicia y poder.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <h2 class="serie-title">Death Note</h2>
-                    <div class="card">
-                        <img src="#" alt="Image 1" class="series-cover">    
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/one_piece.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">One Piece <span class="badge rounded-pill bg-warning">16+</span></h5>
+                            <ul>
+                                <li>Estreno: 1999</li>
+                                <li>Temporadas: 20</li>
+                            </ul>
+                            <p class="card-text">One Piece sigue las aventuras de Monkey D. Luffy, un joven pirata que sueña con encontrar el legendario tesoro One Piece y convertirse en el Rey de los Piratas. Acompañado por su tripulación, viaja por mares peligrosos enfrentando enemigos, gobiernos corruptos y desafíos épicos. Es una historia de amistad, libertad y sueños imposibles.</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <h1 class="genres">Terror</h1>
             <hr class="divider">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <h2 class="serie-title">The Walking Dead</h2>
-                    <div class="card bg-dark">
-                        <img src="#" alt="Image 1" class="series-cover">    
+            <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/stranger_things.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Stranger Things <span class="badge rounded-pill bg-warning">16+</span></h5>
+                            <ul>
+                                <li>Estreno: 2016</li>
+                                <li>Temporadas: 4</li>
+                            </ul>
+                            <p class="card-text">Stranger Things es una serie de ciencia ficción y misterio ambientada en los años 80, que sigue a un grupo de niños mientras investigan la desaparición de su amigo. En su búsqueda, descubren a una niña con poderes telequinéticos y un portal hacia un mundo oscuro llamado El Otro Lado. Combina nostalgia, terror y aventuras con un fuerte vínculo de amistad.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <h2 class="serie-title">Stranger Things</h2>
-                    <div class="card">
-                        <img src="#" alt="Image 1" class="series-cover">    
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/the_walking_dead.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">The Walking Dead <span class="badge rounded-pill bg-danger">18+</span></h5>
+                            <ul>
+                                <li>Estreno: 2010</li>
+                                <li>Temporadas: 11</li>
+                            </ul>
+                            <p class="card-text">The Walking Dead sigue a un grupo de supervivientes en un mundo postapocalíptico lleno de zombis, conocidos como “caminantes”. Liderados por Rick Grimes, luchan por sobrevivir enfrentando tanto a los muertos como a otros humanos peligrosos. La serie explora la moral, la supervivencia y la transformación de las personas ante el caos.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <h2 class="serie-title">The Haunting of Hill House</h2>
-                    <div class="card">
-                        <img src="#" alt="Image 1" class="series-cover">    
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/american_horror_story.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">American Horror Story <span class="badge rounded-pill bg-danger">18+</span></h5>
+                            <ul>
+                                <li>Estreno: 2011</li>
+                                <li>Temporadas: 12</li>
+                            <p class="card-text">American Horror Story es una serie de antología en la que cada temporada cuenta una historia de terror diferente, desde casas embrujadas hasta circos macabros y cultos siniestros. Combina horror, misterio y elementos sobrenaturales con personajes complejos y giros inesperados. Destaca por su estilo visual distintivo y su enfoque psicológico del miedo.</p>
+                        </div>
                     </div>
                 </div>
+            </div>
         </div>
     </main>
     <footer>
