--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
         <div  class="container">
             <h1 class="genres">Anime</h1>
             <hr class="divider">
-            <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+            <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <img src="img/demon_slayer.jpg" class="card-img-top fixed-img" alt="...">
@@ -96,7 +96,94 @@
                             <ul>
                                 <li>Estreno: 2011</li>
                                 <li>Temporadas: 12</li>
+                            </ul>
                             <p class="card-text">American Horror Story es una serie de antología en la que cada temporada cuenta una historia de terror diferente, desde casas embrujadas hasta circos macabros y cultos siniestros. Combina horror, misterio y elementos sobrenaturales con personajes complejos y giros inesperados. Destaca por su estilo visual distintivo y su enfoque psicológico del miedo.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h1 class="genres">Comedia</h1>
+            <hr class="divider">
+            <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/brooklyn_nine_nine.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Brooklyn Nine-Nine <span class="badge rounded-pill bg-warning">12+</span></h5>
+                            <ul>
+                                <li>Estreno: 2013</li>
+                                <li>Temporadas: 8</li>
+                            </ul>
+                            <p class="card-text">Brooklyn Nine-Nine es una comedia policial que sigue al detective Jake Peralta y a su equipo en la comisaría del distrito 99 de Brooklyn. Entre casos criminales y situaciones absurdas, el grupo combina el humor con la amistad y el trabajo en equipo. La serie destaca por su ritmo ágil, personajes carismáticos y tono ligero.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/the_office.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">The Office <span class="badge rounded-pill bg-warning" >12+</span></h5>
+                            <ul>
+                                <li>Estreno: 2005</li>
+                                <li>Temporadas: 9</li>
+                            </ul>
+                            <p class="card-text">The Office es una comedia ambientada en una oficina de venta de papel, presentada en formato de falso documental. Muestra el día a día de los empleados y las situaciones absurdas lideradas por su torpe pero entrañable jefe, Michael Scott. Con humor incómodo y personajes únicos, retrata de forma brillante la vida laboral cotidiana.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/friends.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Friends <span class="badge rounded-pill bg-warning">12+</span></h5>
+                            <ul>
+                                <li>Estreno: 1994</li>
+                                <li>Temporadas: 10</li>
+                            </ul>
+                            <p class="card-text">Friends es una comedia que sigue la vida de seis amigos que viven en Nueva York mientras enfrentan el amor, el trabajo y las locuras de la vida adulta. Con humor y ternura, muestra su evolución personal y sus vínculos inquebrantables. Es una de las series más icónicas y queridas de la televisión.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h1 class="genres">Drama</h1>
+            <hr class="divider">
+            <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/breaking-bad.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Breking Bad <span class="badge rounded-pill bg-warning">16+</span></h5>
+                            <ul>
+                                <li>Estreno: 2013</li>
+                                <li>Temporadas: 5</li>
+                            </ul>
+                            <p class="card-text">Breaking Bad cuenta la historia de Walter White, un profesor de química que, tras ser diagnosticado con cáncer, comienza a fabricar metanfetamina junto a su exalumno Jesse Pinkman. Lo que empieza como un intento de asegurar el futuro de su familia se transforma en una peligrosa espiral de poder y corrupción. Es una intensa serie sobre moral, ambición y consecuencias.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/peaky_blinders.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Peaky Blinders <span class="badge rounded-pill bg-danger" >18+</span></h5>
+                            <ul>
+                                <li>Estreno: 2013</li>
+                                <li>Temporadas: 6</li>
+                            </ul>
+                            <p class="card-text">Peaky Blinders sigue a la familia Shelby, una poderosa banda criminal en el Birmingham de la posguerra. Liderados por el astuto y ambicioso Tommy Shelby, buscan expandir su imperio mientras enfrentan a rivales, policías y políticos. La serie combina drama, violencia y estilo con una ambientación y banda sonora inconfundibles.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/the_crown.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">The Crown <span class="badge rounded-pill bg-warning">16+</span></h5>
+                            <ul>
+                                <li>Estreno: 2016</li>
+                                <li>Temporadas: 6</li>
+                            </ul>
+                            <p class="card-text">The Crown narra la vida de la reina Isabel II desde su juventud hasta las últimas décadas de su reinado. A través de sus decisiones personales y políticas, muestra los desafíos de equilibrar la vida privada con el deber real. La serie destaca por su impecable producción, actuaciones sobresalientes y retrato histórico detallado.</p>
                         </div>
                     </div>
                 </div>
