--- a/main_nuevo-elem.html
+++ b/main_nuevo-elem.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles_nuevo-elem.css" />
   <title>Notfilm</title>
 </head>
 <body>
@@ -49,10 +49,13 @@
       </div>
 
       <div class="form-actions">
-        <button type="button" class="btn btn-volver" onclick="location.href= SINHACER">Cancelar</button>
+        <button type="button" class="btn btn-volver" onclick="location.href= main.html">Cancelar</button>
         <button type="submit" class="btn btn-default">Guardar</button>
       </div>
     </form>
   </div>
+  <footer>
+      <span>Creado por: Héctor Moreno García, Daniel Marcos Serrano y Jaime Bergad Lario</span>
+  </footer>
 </body>
 </html>
