UPGRADE main AND css detalle button

--- a/main_detalle_notfiml.html
+++ b/main_detalle_notfiml.html
@@ -42,6 +42,13 @@
             <div class="row">
                 <video id="video" src="videos/videoplayback.mp4" controls autoplay loop poster="img/kimetsu.jpg" ></video>
             </div>
+            <div id="row_button" class="row">
+                <div class="botones-grupo">
+                    <button type="button" class="btn-custom">Borrar</button>
+                    <button type="button" class="btn-custom">Editar</button>
+                    <button type="button" class="btn-custom">Pagina principal</button>
+                </div>
+            </div>
         </div> <!--Fin columna izquierda-->
         <div id="ColumnRDerecha" class="col-lg-4 col-12">
             <div class="form-container">
@@ -72,11 +79,6 @@
                     <button type="button" class="btn-default">Añadir</button>
                 </div>
                 </form>
-            </div>
-            <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                <button id="BotonS"  type="button" class="btn btn-primary">Borrar</button>
-                <button id="BotonS" type="button" class="btn btn-primary">Editar</button>
-                <button id="BotonS" type="button" class="btn btn-primary">Pagina principal</button>
             </div>
         </div>
     </div>                  
