--- a/main_detalle_notfiml.html
+++ b/main_detalle_notfiml.html
@@ -21,8 +21,24 @@
                 <hr class="divider">
             </div>
             <div class="row">
-                <h3>1.Episodio</h3> <!--Posible lista de numeros-->
+                <h3>1.Crueldad</h3> <!--Posible lista de numeros-->
                 <p>24 minutos </p>
+            </div>
+            <div id="row_button" class="row">
+                <div class="botones-grupo1">
+                    <button class="btn-interactivo">
+                        <i class="bi bi-hand-thumbs-up-fill"></i>
+                        <span class="btn-text">Me gusta</span>
+                    </button>
+                    <button class="btn-interactivo">
+                        <i class="bi bi-arrow-down-circle-fill"></i>
+                        <span class="btn-text">Descargar</span>
+                    </button>
+                    <button class="btn-interactivo">
+                        <i class="bi bi-share-fill"></i>
+                        <span class="btn-text">Compartir</span>
+                    </button> 
+                </div>
             </div>
             <div class="row">
                         <h5>Sinopsis:</h5>
@@ -43,10 +59,19 @@
                 <video id="video" src="videos/videoplayback.mp4" controls autoplay loop poster="img/kimetsu.jpg" ></video>
             </div>
             <div id="row_button" class="row">
-                <div class="botones-grupo">
-                    <button type="button" class="btn-custom">Borrar</button>
-                    <button type="button" class="btn-custom">Editar</button>
-                    <button type="button" class="btn-custom">Pagina principal</button>
+                <div class="botones-grupo2">
+                    <button class="btn-interactivo">
+                        <i class="bi bi-trash"></i>
+                        <span class="btn-text">Borrar</span>
+                    </button>
+                    <button class="btn-interactivo">
+                        <i class="bi bi-pencil-fill"></i>
+                        <span class="btn-text">Editar</span>
+                    </button>
+                    <a href="main.html" class="btn-interactivo">
+                        <i class="bi bi-arrow-left-circle-fill"></i>
+                        <span class="btn-text">Pagina principal</span>
+                    </a> 
                 </div>
             </div>
         </div> <!--Fin columna izquierda-->
@@ -65,7 +90,7 @@
                 </div>
                 <div class="form-group">
                     <label for="NumEp" class="form-label">Número de episodio</label>
-                    <input type="number" class="form-control" id="NumEp" placeholder="Escribe el género" required />
+                    <input type="number" class="form-control" id="NumEp" placeholder="Ejemplo: Episodio 1" required />
                 </div>
                 <div class="form-group">
                     <label for="Duracion" class="form-label">Duración del episodio  </label>
