UPDATE main, img, style

--- a/main.html
+++ b/main.html
@@ -61,7 +61,7 @@
             </div>
             <h1 class="genres">Terror</h1>
             <hr class="divider">
-            <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+            <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <img src="img/stranger_things.jpg" class="card-img-top fixed-img" alt="...">
@@ -104,7 +104,7 @@
             </div>
             <h1 class="genres">Comedia</h1>
             <hr class="divider">
-            <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+            <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <img src="img/brooklyn_nine_nine.jpg" class="card-img-top fixed-img" alt="...">
@@ -147,7 +147,7 @@
             </div>
             <h1 class="genres">Drama</h1>
             <hr class="divider">
-            <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+            <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <img src="img/breaking-bad.jpg" class="card-img-top fixed-img" alt="...">
@@ -184,6 +184,49 @@
                                 <li>Temporadas: 6</li>
                             </ul>
                             <p class="card-text">The Crown narra la vida de la reina Isabel II desde su juventud hasta las últimas décadas de su reinado. A través de sus decisiones personales y políticas, muestra los desafíos de equilibrar la vida privada con el deber real. La serie destaca por su impecable producción, actuaciones sobresalientes y retrato histórico detallado.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h1 class="genres">Ciencia ficción</h1>
+            <hr class="divider">
+            <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/breaking-bad.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">The Mandalorian <span class="badge rounded-pill bg-warning">16+</span></h5>
+                            <ul>
+                                <li>Estreno: 2013</li>
+                                <li>Temporadas: 5</li>
+                            </ul>
+                            <p class="card-text">Breaking Bad cuenta la historia de Walter White, un profesor de química que, tras ser diagnosticado con cáncer, comienza a fabricar metanfetamina junto a su exalumno Jesse Pinkman. Lo que empieza como un intento de asegurar el futuro de su familia se transforma en una peligrosa espiral de poder y corrupción. Es una intensa serie sobre moral, ambición y consecuencias.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/black_mirror.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Mirror <span class="badge rounded-pill bg-danger" >18+</span></h5>
+                            <ul>
+                                <li>Estreno: 2011</li>
+                                <li>Temporadas: 7</li>
+                            </ul>
+                            <p class="card-text">Black Mirror es una serie antológica que explora el lado oscuro de la tecnología y su impacto en la sociedad moderna. Cada episodio presenta una historia independiente que mezcla ciencia ficción, drama y crítica social. Con tonos inquietantes y reflexivos, muestra cómo el progreso puede distorsionar la naturaleza humana.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 bg-dark text-white">
+                        <img src="img/the_boys.jpg" class="card-img-top fixed-img" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">The boys <span class="badge rounded-pill bg-danger">18+</span></h5>
+                            <ul>
+                                <li>Estreno: 2019</li>
+                                <li>Temporadas: 4</li>
+                            </ul>
+                            <p class="card-text">The Boys presenta un mundo donde los superhéroes son celebridades corruptas controladas por una poderosa corporación. Un grupo de vigilantes decide enfrentarse a ellos para revelar sus abusos y oscuros secretos. La serie combina acción, humor negro y crítica social en una versión violenta y satírica del género de superhéroes.</p>
                         </div>
                     </div>
                 </div>
