UPDATE header and footer detalle

--- a/main_detalle_notfiml.html
+++ b/main_detalle_notfiml.html
@@ -108,5 +108,23 @@
         </div>
     </div>                  
 </div>
+<footer>
+    <div class="footerCt">
+        <div class="footerTl">
+            <span>NOTFILM</span>
+        </div>
+        <div class="footerTxt">
+            <p>Inicio</p>
+            <p>Ayuda</p>
+            <p>Redes Sociales</p>
+            <p>creado por:</p>
+            <ul>
+                <li>Jaime Bergad Lario</li>
+                <li>Héctor Moreno García</li>
+                <li>Daniel Marcos Serrano</li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 </html> 
