--- a/main_nuevo-elem.html
+++ b/main_nuevo-elem.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -54,8 +54,23 @@
       </div>
     </form>
   </div>
-  <footer>
-      <span>Creado por: Héctor Moreno García, Daniel Marcos Serrano y Jaime Bergad Lario</span>
-  </footer>
+<footer>
+    <div class="footerCt">
+        <div class="footerTl">
+            <span>NOTFILM</span>
+        </div>
+        <div class="footerTxt">
+            <p>Inicio</p>
+            <p>Ayuda</p>
+            <p>Redes Sociales</p>
+            <p>creado por:</p>
+            <ul>
+                <li>Jaime Bergad Lario</li>
+                <li>Héctor Moreno García</li>
+                <li>Daniel Marcos Serrano</li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
