UPDATE main and styles

--- a/main_nuevo-elem.html
+++ b/main_nuevo-elem.html
@@ -54,23 +54,20 @@
       </div>
     </form>
   </div>
-<footer>
-    <div class="footerCt">
-        <div class="footerTl">
-            <span>NOTFILM</span>
-        </div>
-        <div class="footerTxt">
-            <p>Inicio</p>
-            <p>Ayuda</p>
-            <p>Redes Sociales</p>
-            <p>creado por:</p>
-            <ul>
-                <li>Jaime Bergad Lario</li>
-                <li>Héctor Moreno García</li>
-                <li>Daniel Marcos Serrano</li>
-            </ul>
-        </div>
-    </div>
-</footer>
+  <footer class="d-flex flex-column align-items-center justify-content-center">
+      <p class="footer-texto text-center">Tu dosis diaria de series, siempre a un click.</p>
+      <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+          <a href="#">
+               <i class="bi bi-twitter-x"></i>
+          </a>
+          <a href="#">
+               <i class="bi bi-instagram"></i>
+          </a>
+          <a href="#">
+              <i class="bi bi-facebook"></i>
+          </a>
+      </div>
+      <div class="derechos-de-autor">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169;</div>
+  </footer>
 </body>
 </html>
