--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <!-- Bootstap css and js -->
+    <link rel="shortcut icon" href="img/logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -28,7 +29,7 @@
         <div  class="container">
             <h1 class="genres">Anime</h1>
             <hr class="divider">
-            <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4"> 
                 <div class="col">
                     <div class="card h-100 bg-dark text-white">
                         <a href="main_detalle_notfiml.html">
@@ -470,6 +471,7 @@
         </div>
     </main>
     <footer class="d-flex flex-column align-items-center justify-content-center">
+        <img src="img/logo.png" alt="footer" class="logo-footer">
         <p class="footer-texto text-center">Tu dosis diaria de series, siempre a un click.</p>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
             <a href="#">
@@ -482,7 +484,7 @@
                 <i class="bi bi-facebook"></i>
             </a>
         </div>
-        <div class="derechos-de-autor">Creado por: Daniel Marcos Serrano Jaime Bergard Lario Héctor Moreno García (2025) &#169;</div>
+        <div class="derechos-de-autor">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169;</div>
     </footer>
 </body>
 </html>
