--- a/main.html
+++ b/main.html
@@ -472,8 +472,8 @@
     </main>
     <footer class="d-flex flex-column align-items-center justify-content-center">
         <img src="img/logo.png" alt="footer" class="logo-footer">
-        <p class="footer-texto text-center">Tu dosis diaria de series, siempre a un click.</p>
-        <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+        <p class="footer-text text-center">Tu dosis diaria de series, siempre a un click.</p>
+        <div class="icons-social-networks d-flex flex-wrap align-items-center justify-content-center">
             <a href="#">
                 <i class="bi bi-twitter-x"></i>
             </a>
@@ -484,7 +484,7 @@
                 <i class="bi bi-facebook"></i>
             </a>
         </div>
-        <div class="derechos-de-autor">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169;</div>
+        <div class="copyright">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169;</div>
     </footer>
 </body>
 </html>
