--- a/main_nuevo-elem.html
+++ b/main_nuevo-elem.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="styles_nuevo-elem.css" />
   <title>Notfilm</title>
 </head>
@@ -63,19 +64,20 @@
   </div>
 </div>
   <footer class="d-flex flex-column align-items-center justify-content-center">
-      <p class="footer-texto text-center">Tu dosis diaria de series, siempre a un click.</p>
-      <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+      <img src="img/logo.png" alt="footer" class="logo-footer">
+      <p class="footer-text text-center">Tu dosis diaria de series, siempre a un click.</p>
+      <div class="icons-social-networks d-flex flex-wrap align-items-center justify-content-center">
           <a href="#">
-               <i class="bi bi-twitter-x"></i>
+              <i class="bi bi-twitter-x"></i>
           </a>
           <a href="#">
-               <i class="bi bi-instagram"></i>
+              <i class="bi bi-instagram"></i>
           </a>
           <a href="#">
               <i class="bi bi-facebook"></i>
           </a>
       </div>
-      <div class="derechos-de-autor">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169</div>
+      <div class="copyright">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169</div>
   </footer>
 </body>
 </html>
