--- a/main_detalle_notfiml.html
+++ b/main_detalle_notfiml.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main_detalle_notfiml.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"><!--Para poder poner simbolos-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Notfilm_</title>
 </head>
 <body>
@@ -15,36 +15,35 @@
     </header>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-8 col-12"><!--Ajustar segun pantalla-->
+        <div class="col-lg-8 col-12">
             <div class="row">
-                <h1 id="Titulo" class="card-title">Demon Slayer <span class="badge rounded-pill bg-warning">16+</span></h1>
+                <h1 id="Title" class="card-title">Demon Slayer <span class="badge rounded-pill bg-warning">16+</span></h1>
                 <hr class="divider">
             </div>
             <div class="row">
-                <h3>1.Crueldad</h3> <!--Posible lista de numeros-->
+                <h3>1.Crueldad</h3>
                 <p>24 minutos </p>
             </div>
             <div id="row_button" class="row">
-                <div class="botones-grupo1">
-                    <button class="btn-interactivo">
+                <div class="buttons-group1">
+                    <button class="btn-interactive">
                         <i class="bi bi-hand-thumbs-up-fill"></i>
                         <span class="btn-text">Me gusta</span>
                     </button>
-                    <button class="btn-interactivo">
+                    <button class="btn-interactive">
                         <i class="bi bi-arrow-down-circle-fill"></i>
                         <span class="btn-text">Descargar</span>
                     </button>
-                    <button class="btn-interactivo">
+                    <button class="btn-interactive">
                         <i class="bi bi-share-fill"></i>
                         <span class="btn-text">Compartir</span>
                     </button> 
                 </div>
             </div>
             <div class="row">
-                        <h5>Sinopsis:</h5>
-                        <p id="Text_sinopsis">Tras encontrar a su familia masacrada, Tanjiro Kamado descubre que su hermana Nezuko se ha convertido en un demonio, pero conserva parte de su humanidad al protegerlo. Un cazador de demonios les ofrece una oportunidad única: buscar una cura para Nezuko mientras se unen a la lucha contra las criaturas que amenazan a la humanidad
-                            Así comienza su viaje, donde Tanjiro entrena para convertirse en cazador y Nezuko lucha por controlar su naturaleza demoníaca, enfrentándose juntos a peligros sobrenaturales mientras buscan desesperadamente una solución que pueda devolverle su humanidad </p>
-                        </p>
+                <h5>Sinopsis:</h5>
+                <p id="Text_synopsis">Tras encontrar a su familia masacrada, Tanjiro Kamado descubre que su hermana Nezuko se ha convertido en un demonio, pero conserva parte de su humanidad al protegerlo. Un cazador de demonios les ofrece una oportunidad única: buscar una cura para Nezuko mientras se unen a la lucha contra las criaturas que amenazan a la humanidad
+                    Así comienza su viaje, donde Tanjiro entrena para convertirse en cazador y Nezuko lucha por controlar su naturaleza demoníaca, enfrentándose juntos a peligros sobrenaturales mientras buscan desesperadamente una solución que pueda devolverle su humanidad </p>
             </div>      
             <div id="row_button" class="row">
                 <button type="button" class="btn btn-danger">
@@ -59,46 +58,45 @@
                 <video id="video" src="videos/videoplayback.mp4" controls autoplay loop poster="img/kimetsu.jpg" ></video>
             </div>
             <div id="row_button" class="row">
-                <div class="botones-grupo2">
-                    <button class="btn-interactivo">
+                <div class="buttons-group2">
+                    <button class="btn-interactive">
                         <i class="bi bi-trash"></i>
                         <span class="btn-text">Borrar</span>
                     </button>
-                    <button class="btn-interactivo">
+                    <button class="btn-interactive">
                         <i class="bi bi-pencil-fill"></i>
                         <span class="btn-text">Editar</span>
                     </button>
-                    <a href="main.html" class="btn-interactivo">
+                    <a href="main.html" class="btn-interactive">
                         <i class="bi bi-arrow-left-circle-fill"></i>
                         <span class="btn-text">Pagina principal</span>
                     </a> 
                 </div>
             </div>
-        </div> <!--Fin columna izquierda-->
-        <div id="ColumnRDerecha" class="col-lg-4 col-12">
+        </div>
+        <div class="col-lg-4 col-12">
             <div class="form-container">
-                <h2 id:="Titulo-form">Crear nuevo episodio</h2> 
+                <h2 id="Form-title">Crear nuevo episodio</h2> 
                 <form>
                 <div class="form-group">
-                    <label for="tituloEp" class="form-label">Título del episodio</label>
-                    <input type="text" class="form-control" id="tituloEp" placeholder="Nombre del episodio" required/>
+                    <label for="titleEp" class="form-label">Título del episodio</label>
+                    <input type="text" class="form-control" id="titleEp" placeholder="Nombre del episodio" required/>
                 </div>
-
                 <div class="form-group">
-                    <label for="sinopsis" class="form-label">Sinopsis</label>
-                    <textarea class="form-control" id="sinopsis" placeholder="Breve descripción del episodio" rows="3" required></textarea>
+                    <label for="synopsis" class="form-label">Sinopsis</label>
+                    <textarea class="form-control" id="synopsis" placeholder="Breve descripción del episodio" rows="3" required></textarea>
                 </div>
                 <div class="form-group">
                     <label for="NumEp" class="form-label">Número de episodio</label>
                     <input type="number" class="form-control" id="NumEp" placeholder="Ejemplo: Episodio 1" required />
                 </div>
                 <div class="form-group">
-                    <label for="Duracion" class="form-label">Duración del episodio  </label>
-                    <input type="number" class="form-control" id="Duracion" placeholder="Ejemplo: 24 minutos" required />
+                    <label for="Duration" class="form-label">Duración del episodio</label>
+                    <input type="number" class="form-control" id="Duration" placeholder="Ejemplo: 24 minutos" required />
                 </div>
                 <div class="form-group">
-                    <label for="Episodio" class="form-label">Episodio</label>
-                    <input type="file" class="form-control" id="Episodio" />
+                    <label for="Episode" class="form-label">Episodio</label>
+                    <input type="file" class="form-control" id="Episode" />
                 </div>
                 <div class="form-actions">
                     <button type="button" class="btn-default">Añadir</button>
@@ -108,23 +106,21 @@
         </div>
     </div>                  
 </div>
-<footer>
-    <div class="footerCt">
-        <div class="footerTl">
-            <span>NOTFILM</span>
-        </div>
-        <div class="footerTxt">
-            <p>Inicio</p>
-            <p>Ayuda</p>
-            <p>Redes Sociales</p>
-            <p>creado por:</p>
-            <ul>
-                <li>Jaime Bergad Lario</li>
-                <li>Héctor Moreno García</li>
-                <li>Daniel Marcos Serrano</li>
-            </ul>
-        </div>
+<footer class="d-flex flex-column align-items-center justify-content-center">
+    <img src="img/logo.png" alt="footer" class="logo-footer">
+    <p class="footer-text text-center">Tu dosis diaria de series, siempre a un click.</p>
+    <div class="icons-social-networks d-flex flex-wrap align-items-center justify-content-center">
+        <a href="#">
+            <i class="bi bi-twitter-x"></i>
+        </a>
+        <a href="#">
+            <i class="bi bi-instagram"></i>
+        </a>
+        <a href="#">
+            <i class="bi bi-facebook"></i>
+        </a>
     </div>
+    <div class="copyright">Creado por: Daniel Marcos Serrano Jaime Bergad Lario Héctor Moreno García (2025) &#169;</div>
 </footer>
 </body>
-</html> 
+</html>
