--- a/main_nuevo-elem.html
+++ b/main_nuevo-elem.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="styles_nuevo-elem.css" />
-  <title>Notfilm</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap CSS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> <!-- Iconos de Bootstrap -->
+    <link rel="stylesheet" href="styles_nuevo-elem.css" /> <!-- CSS personalizado -->
+    <title>Notfilm</title>
 </head>
 <header>
-  <span>NOTFILM</span>
+  <span>NOTFILM</span> <!-- Logo/texto del header -->
 </header>
 <body>
-<div class="container my-5">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-8 col-lg-6">
+<div class="container my-5"> <!-- Contenedor centrado con margen vertical -->
+  <div class="row justify-content-center"> <!-- Fila centrada horizontalmente -->
+    <div class="col-12 col-md-8 col-lg-6"> <!-- Tamaños responsivos -->
       <div class="form-container">
         <form>
           <div class="form-group">
             <label for="titulo" class="form-label">Título</label>
-            <input type="text" class="form-control" id="titulo" placeholder="Nombre de la serie" required/>
+            <input type="text" class="form-control" id="titulo" placeholder="Nombre de la serie" required/> <!-- Input para título -->
           </div>
 
           <div class="form-group">
             <label for="sinopsis" class="form-label">Sinopsis</label>
-            <textarea class="form-control" id="sinopsis" placeholder="Breve descripción de la serie" rows="3" required></textarea>
+            <textarea class="form-control" id="sinopsis" placeholder="Breve descripción de la serie" rows="3" required></textarea> <!-- Área de texto para sinopsis -->
           </div>
           <div class="form-group">
             <label for="genero" class="form-label">Género</label>
-            <select id="genero" class="form-select" required>
+            <select id="genero" class="form-select" required> <!-- Selector de género -->
               <option value="">Selecciona un género</option>
               <option value="accion">Acción</option>
               <option value="aventura">Aventura</option>
@@ -46,25 +46,25 @@
 
           <div class="form-group">
             <label for="portada" class="form-label">Portada</label>
-            <input type="file" class="form-control" id="portada" />
+            <input type="file" class="form-control" id="portada" /> <!-- Input para subir imagen -->
           </div>
 
           <div class="form-group">
             <label for="año" class="form-label">Año de estreno</label>
-            <input type="number" class="form-control" id="año" placeholder="Año en el que se estrenó" required />
+            <input type="number" class="form-control" id="año" placeholder="Año en el que se estrenó" required /> <!-- Año de estreno -->
           </div>
 
           <div class="form-actions">
-            <button type="button" class="btn btn-volver" onclick="location.href='main.html'">Cancelar</button>
-            <button type="submit" class="btn btn-default">Guardar</button>
+            <button type="button" class="btn btn-volver" onclick="location.href='main.html'">Cancelar</button> <!-- Botón cancelar -->
+            <button type="submit" class="btn btn-default">Guardar</button> <!-- Botón guardar -->
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
-  <footer class="d-flex flex-column align-items-center justify-content-center">
-      <img src="img/logo.png" alt="footer" class="logo-footer">
+  <footer class="d-flex flex-column align-items-center justify-content-center"> <!-- Footer centrado -->
+      <img src="img/logo.png" alt="footer" class="logo-footer"> <!-- Logo footer -->
       <p class="footer-text text-center">Tu dosis diaria de series, siempre a un click.</p>
       <div class="icons-social-networks d-flex flex-wrap align-items-center justify-content-center">
           <a href="#">
