--- a/main_detalle_notfiml.html
+++ b/main_detalle_notfiml.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="main_detalle_notfiml.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Notfilm_</title>
+    <title>Notfilm</title>
 </head>
 <body>
     <header>
