--- a/main_nuevo-elem.html
+++ b/main_nuevo-elem.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> <!-- Iconos de Bootstrap -->
     <link rel="stylesheet" href="styles_nuevo-elem.css" /> <!-- CSS personalizado -->
+    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <title>Notfilm</title>
 </head>
 <header>
