--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
         <div class="container d-flex justify-content-center">
             <form class="d-flex w-100 justify-content-center" role="search" id="barra_busqueda">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-outline-danger" type="submit">Search</button>
                 <a class="btn btn-primary ms-2" href="main_nuevo-elem.html" role="button">+</a>
             </form>
         </div>
